src/test/deca/syntax/valid/provided/test_convfloat.deca
//test convfloat

{
    //declarations
    int x = 5;
    float y = 2;
    y = y + x;
    print(x);
    println(y);
}
