src/test/deca/syntax/invalid/provided/duoreadint.deca
// Description:
//   Faire une déclaration après début de ListInstruction
//
// Résultats:
//   Erreur syntaxique: :4:4: no viable alternative at input 'y'

{int x = 2;
x = 5;
int y = readInt();
int z = readFloat() ; 
z = y 
print(z);
}

/*  Commentaire  */
